重构憎恶女皇技能并接入 Photon 动画效果